--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ video[autoplay].is-playing {
         left: 0;
         right: 0;
         height: 80px;
-        background: linear-gradient(to bottom, rgba(18, 18, 18, 0), #121212);
+        background: linear-gradient(to bottom, transparent, black);
         pointer-events: none;
         transition: opacity 0.3s ease;
     }
